2008-02-01  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-gsm.c
		- (add_disconnect_item, gsm_menu_item_deactivate): add Disconnect...
			menu item, deactivate the device when it's selected
		- (gsm_add_menu_item): always display the device titles; never collapse
			a single connection into the device title

	* src/applet-device-cdma.c
		- (add_disconnect_item, cdma_menu_item_deactivate): add Disconnect...
			menu item, deactivate the device when it's selected
		- (cdma_add_menu_item): always display the device titles; never collapse
			a single connection into the device title

	* src/applet-device-wired.c
		- (wired_add_menu_item): always display the device titles; never collapse
			a single connection into the device title

2008-02-01  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-wireless.c
		- (other_wireless_activate_cb, new_network_activate_cb): use
			gtk_window_present_with_time()

2008-02-01  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (nma_menu_add_separator_item): take a GtkWidget instead of a
			GtkMenuShell
		- (nma_menu_add_devices): don't add extra wireless menu items here, but
			return # of wireless devices
		- (nma_menu_add_vpn_submenu, nma_menu_add_vpn_submenu): pass a GtkWidget
			to nma_menu_add_separator_item()
		- (nma_menu_show_cb): add extra wireless items after the VPN menu
		- (nma_context_menu_create): pass a GtkWidget to
			nma_menu_add_separator_item(); put a separator between the
			"Enable Wireless" item and the "Connection Information" item

2008-01-28  Dan Williams  <dcbw@redhat.com>

	* po/POTFILES.in
		- Add new translatables

	* src/connection-editor/Makefile.am
		- Add new pae sources and glade files

	* src/connection-editor/page-wired.c
	  src/connection-editor/page-wired.h
	  src/connection-editor/ce-page-wired.glade
		- Split wired bits out

	* src/connection-editor/page-wireless.c
	  src/connection-editor/page-wireless.h
	  src/connection-editor/ce-page-wireless.glade
		- Split wireless bits out
